--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -3,14 +3,27 @@ builds:
   - builder: prebuilt
     goos:
       - linux
-      - windows
+    goarch:
+      - arm64
+    prebuilt:
+      path: "{{ .Os }}/testkube_{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/kubectl-testkube{{ .Ext }}"
+    binary: kubectl-testkube
+  - builder: prebuilt
+    goos:
       - darwin
     goarch:
       - amd64
-      - arm64
-      - 386
     goamd64:
       - v1
+    prebuilt:
+      path: "{{ .Os }}/testkube_{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/kubectl-testkube{{ .Ext }}"
+    binary: kubectl-testkube
+  - builder: prebuilt
+    goos:
+      - windows
+    goarch:
+      - arm64
+      - 381
     prebuilt:
       path: "{{ .Os }}/testkube_{{ .Os }}_{{ .Arch }}{{ with .Amd64 }}_{{ . }}{{ end }}/kubectl-testkube{{ .Ext }}"
     binary: kubectl-testkube
@@ -77,9 +90,6 @@ changelog:
       order: 9999
 
 release:
-  # Create a thread in the General category in the repo's discussion tab.
-  discussion_category_name: General
-
   # Tags that have the format v1.0.0-rc1 will mark the release as a pre-release (i.e. not ready for production)
   # Other tags will be marked as ready for production
   prerelease: auto
