--- a/.builds-linux.goreleaser.yml
+++ b/.builds-linux.goreleaser.yml
@@ -11,7 +11,7 @@ builds:
     goos:
       - linux
     goarch:
-      - arm64
+      - amd64
     ldflags:
       - -s -w -X main.version={{.Version}}
       - -X main.commit={{.Commit}}
