--- a/.builds-windows.goreleaser.yml
+++ b/.builds-windows.goreleaser.yml
@@ -11,7 +11,7 @@ builds:
     goos:
       - windows
     goarch:
-      - arm64
+      - amd64
       - 386
     ldflags:
       - -s -w -X main.version={{.Version}}
