--- a/k8s/helm/testkube-runner/Chart.yaml
+++ b/k8s/helm/testkube-runner/Chart.yaml
@@ -2,9 +2,9 @@ apiVersion: v2
 name: testkube-runner
 description: A Helm chart for the Testkube's Runner Agent
 type: application
-version: 2.3.0-rc.0
-appVersion: 2.2.5
+version: 2.3.1
+appVersion: 2.3.0
 dependencies:
 - name: global
-  version: 0.x.x-x
+  version: 0.1.3
   repository: "file://../global"
