chore: add preview candidate builds

--- a/.github/workflows/new-build.yaml
+++ b/.github/workflows/new-build.yaml
@@ -3,6 +3,7 @@ on:
   push:
     tags:
       - '[0-9].[0-9]+.[0-9]+'
+      - '[0-9].[0-9]+.[0-9]+-preview.[0-9]+'
       - '[0-9].[0-9]+.[0-9]+-rc.[0-9]+'
       - '[0-9].[0-9]+.[0-9]+-dev.[0-9]+'
       - '[0-9].[0-9]+.[0-9]+-beta.[0-9]+'
@@ -102,8 +103,11 @@ jobs:
             ${{ steps.cli-meta.outputs.bake-file }}
           targets: api,tw-toolkit,tw-init
           provenance: mode=max
-          push: true
           sbom: true
+          # Only tags are pushed, pushes to branches test whether app can be built.
+          push: ${{github.ref_type == 'tag'}}
+          save: true
+          save-tag: ${{ steps.short-sha.outputs.sha }}
         env:
           VERSION: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.version'] }}
           GIT_SHA: ${{ fromJSON(steps.api-meta.outputs.json).labels['org.opencontainers.image.revision'] }}
@@ -118,7 +122,7 @@ jobs:
   helm:
     runs-on: depot-ubuntu-22.04
     needs: build
-    # Only runs on releases (candidates), excluding -dev and -beta
+    # Only runs on releases (candidates) and preview releases, excluding -dev and -beta
     if: ${{ startsWith(github.event.ref, 'refs/tags') && !contains(github.event.ref, '-dev') && !contains(github.event.ref, '-beta') }}
     permissions:
       contents: read
