--- a/k8s/helm/testkube/Chart.yaml
+++ b/k8s/helm/testkube/Chart.yaml
@@ -6,7 +6,7 @@ version: 2.3.0
 appVersion: 2.3.0
 dependencies:
   - name: testkube-operator
-    version: 2.x.x
+    version: 2.x.x-x
     repository: "file://../testkube-operator"
   - name: mongodb
     condition: mongodb.enabled
@@ -21,8 +21,8 @@ dependencies:
     version: 1.2.6-3
     repository: "file://./charts/nats"
   - name: testkube-api
-    version: 2.x.x
+    version: 2.x.x-x
     repository: "file://../testkube-api"
   - name: global
-    version: 0.x.x
+    version: 0.x.x-x
     repository: "file://../global"
